--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -26,3 +26,14 @@
 
 /* @import 'swiper/css/pagination';
 @import 'swiper/css/navigation'; */
+
+.swiper-pagination-bullet {
+    background: rgba(255, 255, 255, 0.33);
+    opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+    background-color: var(--ion-color-white) !important;
+    width: 40px;
+    border-radius: 4px;
+}
